--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body style="height: 100vh; background-color: rgba(0, 0, 0, .15)">
   <app-root></app-root>
 </body>
 </html>
